objects/Subscription__c.object
<CustomObject>
    <fields>
        <fullName>Channel_Id__c</fullName>
        <label>Channel Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Name__c</fullName>
        <label>Channel Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <label>Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <label>Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Subscription Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Subscription_Type__c</fullName>
        <label>Subscription Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workspace_Id__c</fullName>
        <label>Workspace Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Subscription</label>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>Subscription Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>